refactor: reorganize CSS files and add new styles and documentation

--- a/CSS/Beginner/Basics_1_.html
+++ b/CSS/Beginner/Basics_1_.html
@@ -1,5 +1,7 @@
 <!-- Ways to include css -->
 
+
+
 <!-- 1. Inline css -->
 
 <!DOCTYPE html>
@@ -18,9 +20,10 @@
 </html>
 
 
+
 <!-- 2. Internal css -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <style>
@@ -55,7 +58,8 @@
     <p class="para_two">This is internal CSS para_two .</p>
     <p class="para_three">This is internal CSS para_three .</p>
 </body>
-</html>
+</html> -->
+
 
 
 <!-- 3. External css -->
@@ -71,6 +75,28 @@
  <body>
     <h1>External css</h1>
     <p>This is external css.</p>
+    
+ </body>
+ </html> -->
+
+ <!-- Priority of css: Inline css > Internal css > External css -->
+
+ <!-- <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Priority</title>
+    <link rel="stylesheet" href="Basics_1_.css">
+    <style>
+        h1{
+            color: blue;
+        }
+    </style>
+ </head>
+ <body>
+    <h1 style="color: red;">Priority</h1>
+    <p style="color: palevioletred;">This is inline css.</p>
     
  </body>
  </html> -->
