Gradient.html for proper formatting

--- a/CSS/Projects/BASIC/Gradient.html
+++ b/CSS/Projects/BASIC/Gradient.html
@@ -16,6 +16,8 @@
 </head>
 <body>
     <!-- gradient -->
-    <div class="grad"></div>
+    <div class="grad">
+        
+    </div>
 </body>
 </html>
