feat: update image path in CSS, restructure HTML layout, and enhance styling for better responsiveness and organization

--- a/CSS/Projects/BASIC/first.html
+++ b/CSS/Projects/BASIC/first.html
@@ -4,25 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title> 
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="first.css">
 </head>
 <body>
     <div id="main">
 
-      <div id="left-top-right"> 
+      <div id="left-top-left"> 
         <div id="square"></div>
       </div>
-      <div id="left-top-left">
+
+      <div id="left-top-right">
         <h4>Menu</h4>
-        <h5>home page</h5>
-        <h5>portfolio</h5>
-        <h5>fashion week - 2025</h5>
-        <h5>news / articles</h5>
-        <h5>contacts</h5>
+        <h5>Home page</h5>
+        <h5>Portfolio</h5>
+        <h5>Fashion Week - 2025</h5>
+        <h5>News/Articles</h5>
+        <h5>Contacts</h5>
       </div>
-      <div id="left-center"></div>
-      <div id="left-bottom"></div>
-      <div id="right"></div>
+      
+      <div id="left-center">
+        <h1>Select</h1>
+        <h1>Fashion</h1>
+        <h1>Mod.05 -</h1>
+        <h1>Scene</h1>
+      </div>
+      <div id="left-bottom">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus nihil possimus tenetur odit, consequatur amet doloremque obcaecati soluta illum at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, dolor.</p>
+      </div>
+      <div id="right">
+        <video autoplay loop muted src="../Assets/Video/9c63e1fae790c2ce9105434ae5e4d4d6.mp4"></video>
+      </div>
+
+      <div id="arrow">
+        <i class="ri-arrow-right-line"></i>
+      </div>
 
     </div>
 </body>
